fix: disable long press context menu on iOS chorme

--- a/docs/css/cropper.css
+++ b/docs/css/cropper.css
@@ -19,6 +19,7 @@
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+  -webkit-touch-callout: none;
 }
 
 .cropper-container img {
